# sofka

./: .gitignore  .lefthook.toml  Cargo.toml  Justfile  LICENSE-APACHE  LICENSE-MIT  README.md  flake.nix  package.nix  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/actions/setup-nix/: action.yaml
.github/workflows/: ci.yaml  nix.yaml  release.yaml
.just/: nix.just  release.just  rust.just
src/: app.rs  bundle.rs  columns.rs  config.rs  diagnostics.rs  explain.rs  filter.rs  fleet.rs  gitops.rs  helm.rs  journal.rs  k8s.rs  keys.rs  logfilter.rs  main.rs  providers.rs  rightsize.rs  snapshot.rs  store.rs  theme.rs  thresholds.rs  timeline.rs  ui.rs  views.rs
src/app/: actions.rs  authz.rs  bookmarks.rs  bundle.rs  dashboards.rs  details.rs  diagnostics.rs  explain.rs  fleet.rs  gitops.rs  guardrails.rs  helpers.rs  input.rs  journal.rs  lifecycle.rs  logs.rs  mod.rs  navigation.rs  overlays.rs  pickers.rs  rightsize.rs  rows.rs  snapshot.rs  tests.rs  timeline.rs  workspaces.rs
