[package]
name = "sofka"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A Kubernetes TUI, reimagined in Rust"
repository = "https://github.com/nklmilojevic/sofka"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.32"
futures-util = "0.3.32"
fuzzy-matcher = "0.3.7"
k8s-openapi = { version = "0.28", features = ["latest"] }
kube = { version = "4.0.0", features = ["runtime", "client", "derive", "ws"] }
ratatui = "0.30.1"
serde = "1.0.228"
serde_json = "1.0.150"
serde_yaml = "0.9.34"
similar = "3.1.1"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
