[package]
name = "sofka"
version = "0.13.3"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A Kubernetes TUI, reimagined in Rust"
repository = "https://github.com/nklmilojevic/sofka"

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
flate2 = "1.1.5"
form_urlencoded = "1.2.2"
futures-util = "0.3.32"
fuzzy-matcher = "0.3.7"
http = "1.4.2"
http-body-util = "0.1.3"
hyper = { version = "1.10.1", features = ["client", "http1"] }
hyper-rustls = { version = "0.27.9", default-features = false, features = ["http1", "native-tokio", "ring", "tls12"] }
hyper-util = { version = "0.1.20", features = ["client-legacy", "http1", "tokio"] }
k8s-openapi = { version = "0.28", features = ["latest"] }
kube = { version = "4.0.0", features = ["runtime", "client", "derive", "ws"] }
ratatui = "0.30.1"
regex = "1"
serde = "1.0.228"
serde_json = "1.0.150"
serde_yaml = "0.9.34"
similar = "3.1.1"
terminal-colorsaurus = "1.0.3"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
unicode-width = "0.2.2"

[profile.release]
# Thin LTO: within ~1-3% of fat LTO's runtime at a fraction of the build
# time — this profile is built cold on every release (4 targets + 4 Nix
# builds), so compile time matters more than the last percent.
lto = "thin"
strip = true
